# lang2

./: Cargo.toml  README.md  lang2.cabal  tests.json
app/: Main.hs
lib/: AST.hs  Parser.hs  SCC.hs  Types.hs
src/lang2-ast/: Cargo.toml
src/lang2-ast/src/: builder.rs  lib.rs
src/lang2-misc/: Cargo.toml
src/lang2-misc/src/: lib.rs
src/lang2-parser/: Cargo.toml
src/lang2-parser/src/: lib.rs
src/lang2-sema/: Cargo.toml
src/lang2-sema/src/: preprocessing.rs
src/lang2-shadow/: Cargo.toml
src/lang2-shadow/src/: lib.rs
src/lang2-span/: Cargo.toml
src/lang2-span/src/: lib.rs
tests/: Main.hs  TestSCC.hs  TestTypes.hs  tests.json
tests/parse/: ok.json
tests/parse/basic/: adt_duplicates.lang2  adt_duplicates.lang2.json  data_in_the_end.lang2.json  either.lang2  either.lang2.json  fake_delayed_resolution.lang2  fake_delayed_resolution.lang2.json  match_inaccessible.lang2  match_inaccessible.lang2.json  match_multiple_scrutinees.lang2  match_multiple_scrutinees.lang2.json  match_shadowing.lang2  match_shadowing.lang2.json  mutual_capturing.lang2  mutual_capturing.lang2.json  mutual_recursion.lang2  mutual_recursion.lang2.json  nested_adts.lang2  nested_adts.lang2.json  nested_calls.lang2  nested_calls.lang2.json  ok.json  opts_compose.lang2  opts_compose.lang2.json  out_of_order_tapp.lang2  out_of_order_tapp.lang2.json  simple_fun.lang2  simple_fun.lang2.json  simple_match.lang2  simple_match.lang2.json  type_var_leak.lang2  type_var_leak.lang2.json  unit.lang2  unit.lang2.json  val_inaccessible.lang2  val_inaccessible.lang2.json  val_shadowing.lang2  val_shadowing.lang2.json  variant_shadowing_across_decls.lang2  variant_shadowing_across_decls.lang2.json  (+2 more)
tests/preprocess/: lift.lang2  lift.lang2.ast.json  lift.lang2.json  lift.lang2.pre.json  mutual_capturing.lang2.json  mutual_recursion.lang2  mutual_recursion.lang2.ast.json  mutual_recursion.lang2.json  mutual_recursion.lang2.pre.json  ok.json  simple_lift.lang2  simple_lift.lang2.json
