cabal-version:      2.4
name:               lang2
version:            0.1.0.0

license:            NONE
author:             Iurii Zamiatin

extra-source-files: CHANGELOG.md

library lang2-lib
    hs-source-dirs: lib
    default-language: Haskell2010
    build-depends:
        base ^>=4.16.4.0,
        megaparsec ^>=9.6.0,
        with-utf8 ^>= 1.0.2.4,
        text ^>= 1.2.4.0,
        transformers ^>= 0.5.6.2,
        mtl ^>= 2.3.1,
        monadplus ^>= 1.4.3,
        containers ^>= 0.6.5.1,
        ref-fd ^>= 0.5.0.1,
    exposed-modules:
        Types, SCC

executable lang2c
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base ^>=4.16.4.0,
        with-utf8 ^>= 1.0.2.4,
        text ^>= 1.2.4.0,
        lang2-lib

test-suite tests
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   tests
    default-language: Haskell2010
    build-depends:
        base ^>=4.16.4.0,
        HUnit ^>=1.6,
        lang2-lib,
    other-modules:
        TestTypes, TestSCC
