[package]
name = "lang2-parser"
version = "0.1.0"
edition = "2021"
description = "Parser for the lang2 based on peg.rs crate"

[dependencies]
lang2-ast = { path = "../lang2-ast" }
lang2-span = { path = "../lang2-span" }

logos = "0.13.0"
smallvec = "1.11.1"
serde = { version = "1.0.188", features = ["derive"] }
